// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Passing props to the Profile component 1`] = `
<img
  alt={[Function]}
  src={[Function]}
/>
`;

exports[`Using a rounded profile 1`] = `
<img
  alt={[Function]}
  className="rounded-full"
  src={[Function]}
/>
`;
